--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         const root=document.getElementById("root")
         root.appendChild(heading)
     </script> -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> <!-- this is the core file of react -->
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>  <!-- this is the react library which is useful for DOM operation -->
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>  this is the core file of react -->
+    <!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>  this is the react library which is useful for DOM operation --> 
 
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>    <!-- in html we injecting app.js -->
 </body>
 </html>
